# wp_manager

./: CMakeLists.txt  ColorSettings.cpp  ColorSettings.h  FileUtils.cpp  FileUtils.h  ImagesList.cpp  ImagesList.h  LICENSE  README.md  WallpapersFrame.cpp  WallpapersFrame.h  appicon.rc  main.cpp
